<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:gravity="center"
            android:text="@string/my_shop"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"

            android:adjustViewBounds="true"
            android:scaleType="center"
            android:src="@drawable/p1"
            app:srcCompat="@drawable/p1"
            tools:srcCompat="@drawable/p1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome"/>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/layoutPhone"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:visibility="gone"
                android:text="@string/phone"
                android:textColor="@color/colorPrimaryDark"
                android:padding="10dp"
                android:textSize="@dimen/sp_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etPhone"
                android:digits="0123456789"
                android:maxLength="10"
                android:gravity="center"
                android:hint="@string/enter_user_name"
                android:textColor="@color/black"
                android:background="@drawable/edittext_bg"
                android:drawableEnd="@drawable/ic_phone"

                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>


            <EditText
                android:layout_marginTop="15dp"
                android:id="@+id/etOtp"
                android:digits="0123456789"
                android:maxLength="10"
                android:gravity="center"
                android:hint="@string/enter_password"
                android:textColor="@color/black"
                android:background="@drawable/edittext_bg"
                android:drawableEnd="@android:drawable/ic_partial_secure"

                android:padding="5dp"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>


            <ImageView
                android:layout_gravity="center"
                android:id="@+id/btn_SendOtp"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:src="@drawable/p3a1"
                android:visibility="visible"
                android:layout_marginBottom="10dp"
                android:text="@string/send_otp"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textStyle="bold" />



        </LinearLayout>



    </LinearLayout>
</layout>