<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/registration"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/tvTitle"
            android:padding="10dp"
            android:textSize="@dimen/sp_22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/btnSetupShop"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:padding="10dp"
            android:text="@string/setup_shop"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:layout_marginTop="5dp"
            android:id="@+id/btnStartBuying"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:padding="10dp"
            android:text="@string/start_buying"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </LinearLayout>

</layout>