<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="90dp"
            android:adjustViewBounds="true"
            android:scaleType="center"
            android:src="@drawable/p1"
            app:srcCompat="@drawable/p1" />

        <TextView
            android:text="@string/login"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/tvTitle"
            android:padding="10dp"
            android:textSize="@dimen/sp_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/layoutPhone"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:visibility="gone"
                android:text="@string/phone"
                android:textColor="@color/colorPrimaryDark"
                android:padding="10dp"
                android:textSize="@dimen/sp_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edittext_bg"
                android:digits="0123456789"
                android:drawableEnd="@drawable/ic_phone"
                android:gravity="center"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLength="10"
                android:padding="5dp"
                android:textColor="@color/black" />

            <EditText
                android:layout_marginTop="15dp"
                android:id="@+id/etPassword"
                android:digits="0123456789"
                android:maxLength="10"
                android:gravity="center"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:background="@drawable/edittext_bg"
                android:drawableEnd="@android:drawable/ic_partial_secure"
                android:inputType="textPassword"
                android:padding="5dp"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>


            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_gravity="end"
                android:visibility="visible"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimaryDark"
                android:padding="10dp"
                android:textSize="@dimen/sp_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:visibility="visible"
                android:id="@+id/loginLayoutBtns"
                android:gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_gravity="end"
                    android:id="@+id/btn_Cancel"
                    android:layout_width="120dp"
                    android:layout_height="45dp"
                    android:padding="10dp"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <Button
                    android:layout_gravity="end"
                    android:id="@+id/btn_Login"
                    android:layout_width="120dp"
                    android:layout_height="45dp"
                    android:padding="10dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>



    </LinearLayout>
</layout>