<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/dashboardToolbar"
            layout="@layout/toolbar" />

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/dashboardToolbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/p1"
            tools:ignore="ContentDescription" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageLogo"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:text="@string/search_shops"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/sp_15"
                android:visibility="visible" />

            <EditText

                android:id="@+id/etShopName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittext_bg"
                android:drawableEnd="@drawable/ic_phone"
                android:inputType="text"
                android:padding="5dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:text="@string/search_category"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/sp_15"
                android:visibility="visible" />

            <EditText

                android:id="@+id/etCategory"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittext_bg"
                android:drawableEnd="@drawable/ic_phone"
                android:inputType="text"
                android:padding="5dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:text="@string/search_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/sp_15"
                android:visibility="visible" />

            <EditText

                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittext_bg"
                android:drawableEnd="@drawable/ic_phone"
                android:inputType="text"
                android:padding="5dp"
                android:textColor="@color/black" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>


    </RelativeLayout>
</layout>